# python-flask/swagger_server/controllers/channels_controller.py
@@ -2,8 +2,6 @@ import connexion
 import six
 
 from swagger_server.models.channel import Channel  # noqa: E501
-from swagger_server.models.channel1 import Channel1  # noqa: E501
-from swagger_server.models.inline_response200 import InlineResponse200  # noqa: E501
 from swagger_server import util
 
 
@@ -45,7 +43,7 @@ def channels_read_all(length=None, offset=None):  # noqa: E501
     :param offset: Offset from beginning of list where to start gathering channels
     :type offset: int
 
-    :rtype: List[InlineResponse200]
+    :rtype: List[Channel]
     """
     return 'do some magic!'
 
@@ -76,5 +74,5 @@ def channels_update(name, channel=None):  # noqa: E501
     :rtype: None
     """
     if connexion.request.is_json:
-        channel = Channel1.from_dict(connexion.request.get_json())  # noqa: E501
+        channel = Channel.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
