# python-flask/swagger_server/models/__init__.py
@@ -4,11 +4,5 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.channel import Channel
-from swagger_server.models.channel1 import Channel1
 from swagger_server.models.host import Host
-from swagger_server.models.host1 import Host1
-from swagger_server.models.inline_response200 import InlineResponse200
-from swagger_server.models.inline_response2001 import InlineResponse2001
-from swagger_server.models.inline_response2002 import InlineResponse2002
 from swagger_server.models.service import Service
-from swagger_server.models.service1 import Service1
